maybe adding all the generated files now haha

--- a/notes/example.html
+++ b/notes/example.html
@@ -46,7 +46,7 @@
                 <template search-description>How to Couscous</template>
 
                 <nav class="pagination">
-                    <div>« <a href="http://kupczyk.me/notes/notes/index.html">Home</a></div>
+                    <div>« <a href="http://kupczyk.me/notes/index.html">Home</a></div>
                     <div></div>
                 </nav>
 
@@ -62,7 +62,7 @@
 </ul>
 <!-- CONTENT END -->
                 <nav class="pagination">
-                    <div>« <a href="http://kupczyk.me/notes/notes/index.html">Home</a></div>
+                    <div>« <a href="http://kupczyk.me/notes/index.html">Home</a></div>
                     <div></div>
                 </nav>
             </article>
