--- a/notes/index.html
+++ b/notes/index.html
@@ -47,7 +47,7 @@
 
                 <nav class="pagination">
                     <div></div>
-                    <div><a href="http://kupczyk.me/notes/notes/example.html">An example page</a> »</div>
+                    <div><a href="http://kupczyk.me/notes/example.html">An example page</a> »</div>
                 </nav>
 
 <!-- CONTENT START -->
@@ -137,7 +137,7 @@ nextTitle: An example page  # title of next page (default would be "example" her
 <!-- CONTENT END -->
                 <nav class="pagination">
                     <div></div>
-                    <div><a href="http://kupczyk.me/notes/notes/example.html">An example page</a> »</div>
+                    <div><a href="http://kupczyk.me/notes/example.html">An example page</a> »</div>
                 </nav>
             </article>
             <aside class="sidebar">
