fixing broken link

--- a/notes/example.html
+++ b/notes/example.html
@@ -57,7 +57,7 @@
 <li>cd to dir where .md files lie i.e. Notes</li>
 <li>run /Users/brandonkupczyk/.composer/vendor/couscous/couscous/bin/couscous generate </li>
 <li>cd .couscous</li>
-<li>run cp -r /generated/* ../ </li>
+<li>run cp -r generated/* ../ </li>
 <li>add to git and push!</li>
 </ul>
 <!-- CONTENT END -->
