adding additional notes

--- a/notes/example.html
+++ b/notes/example.html
@@ -55,6 +55,7 @@
 <h2 id="directions">Directions</h2>
 <ul>
 <li>cd to dir where .md files lie i.e. Notes</li>
+<li>run rm -r .couscous/</li>
 <li>run /Users/brandonkupczyk/.composer/vendor/couscous/couscous/bin/couscous generate </li>
 <li>cd .couscous</li>
 <li>run cp -r generated/* ../ </li>
