changed home page

--- a/notes/404.html
+++ b/notes/404.html
@@ -50,19 +50,18 @@
             </article>
             <aside class="sidebar">
                 <hr>
-                <h2>About mintlook</h2>
+                <h2>Brandon&#039;s Notes</h2>
                 <h3>Links</h3>
-                <div class="bulletlink"><a href="/example.html">Example</a></div>
-                <div class="bulletlink"><a href="http://kupczyk.me/notes/">Mintlook and Couscous</a></div>
+                <div class="bulletlink"><a href="http://kupczyk.me/noteshttps://github.com/bkupz/">github</a></div>
                 <hr>
-                <p>Follow us on <a href="http://kupczyk.me">Main Site</a>, <a href="http://instagram.com">Instagram</
+                <p>Links: <a href="http://kupczyk.me">Main Site</a>, <a href="https://www.instagram.com/bkupz/">Instagram</a></p>
 
             </aside>
             <footer>
                 <hr>
 
 <!-- FOOTER BEGIN -->
-<p>Hello <strong>World</strong></
+<p>Brandon Kupczyk - 2018 -</p>
 
 <!-- FOOTER END -->
 
