--- a/notes/index.html
+++ b/notes/index.html
@@ -47,114 +47,33 @@
 
                 <nav class="pagination">
                     <div></div>
-                    <div><a href="http://kupczyk.me/notes/example.html">Couscous Tutorial</a> »</div>
+                    <div><a href="http://kupczyk.me/notes/couscous.html">Couscous usage Tutorial</a> »</div>
                 </nav>
 
 <!-- CONTENT START -->
-<h1 id="couscous-mintlook">Couscous Mintlook</h1>
-<p><img src="https://static.mo-mar.de/couscous-mintlook-mockup.jpg" alt="" /></p>
-<p><a href="https://moqmar.github.io/shell-setup/">Live Example</a></p>
-<h2 id="features">Features</h2>
-<ul>
-<li>Search function</li>
-<li>Language selection</li>
-<li>Pagination (previous/next)</li>
-<li>Syntax highlighting</li>
-<li>Customizable sidebar and footer</li>
-<li>Configurable accent color</li>
-</ul>
-<h2 id="usage">Usage</h2>
-<p>To use the template, set it up in your <code>couscous.yml</code> configuration file:</p>
-<pre><code class="language-yaml">template:
-    url: https://github.com/moqmar/mintlook-couscous</code></pre>
-<p>You should also add the file <a href="https://github.com/moqmar/mintlook-couscous/blob/master/404.html"><code>404.md</code></a> to your documentation and configure your webserver to point to <code>/404.html</code> on missing pages.</p>
-<p>A file <code>icon.png</code> in the project root (<code>baseUrl</code>) will be used as a favicon.</p>
-<h2 id="configuration">Configuration</h2>
-<pre><code class="language-yaml">title: Couscous # Page Title
-logo: https://cdn0.iconfinder.com/data/icons/ie_Shine/128/shine_19.png # Icon URL
-color: "#d21"   # Accent color
-
-languages: ["en", "de"] # List of supported languages. Comment out to disable language selection.
-defaultLanguage: world  # Default language icon, and the value of the html lang attribute. It is recommended to set this even (especially) if you're not using language selection.
-
-search: true # Enable search
-scripts:
-    after:
-        - php .couscous/generated/.scripts/generate-search-index.php # Required for search
-        - rm -rf .couscous/generated/.scripts # Clean up unneccessary files
-
-sidebar:
-    - title: About mintlook
-    - subtitle: Links
-    - text: Homepage
-      link: https://moqmar.github.io/mintlook # absolute link
-    - text: Mintlook and Couscous
-      page: / # relative link
-    - line: true
-    - html: |
-            &lt;p&gt;Follow us on &lt;a href=""&gt;Facebook&lt;/a&gt;, &lt;a href=""&gt;Twitter&lt;/a&gt;, and other &lt;a href=""&gt;social networks&lt;/a&gt;.&lt;/p&gt;
-# you can also define the sidebar per language
-sidebar:
-  de:
-    - title: Über mintlook
-  default: # fallback for all other languages
-    - title: About mintlook
-
-footer: |
-    Hello &lt;strong&gt;World&lt;/strong&gt;
-# you can also define the footer per language
-footer: # fallback for all other languages
-  de: Hallo &lt;strong&gt;Welt&lt;/strong&gt;
-  default: Hello &lt;strong&gt;World&lt;/strong&gt;</code></pre>
-<h3 id="language-selection">Language selection</h3>
-<p>If the <code>languages</code> configuration option is set, you should have a directory structure in the form of <code>/&lt;language&gt;/&lt;...&gt;</code>, with the pages in the <code>defaultLanguage</code> located at just <code>/&lt;...&gt;</code> - e.g. <strong>/de/something.html</strong> for the german version and <strong>/something.html</strong> for the english version.</p>
-<p>Setting the <code>defaultLanguage</code> to <code>world</code>, enforces the <code>/&lt;language&gt;/&lt;...&gt;</code> structure for all sites, and shows a world map instead of a flag for the language selection on pages not adhering to that structure.</p>
-<p>You can also override the displayed language for a single file using the <code>pageLanguage</code> metadata field.</p>
-<p>If you want to automatically go to the user's browser language, you can use the following <code>index.html</code> file in your repository:</p>
-<pre><code class="language-html">&lt;!doctype html&gt;
-&lt;!-- default language --&gt;
-&lt;meta http-equiv="refresh" content="1; URL=en/"&gt;
-&lt;!-- browser language --&gt;
-&lt;script&gt;
-var supportedLanguages = ["en", "de"]; // Should be the same as in couscous.yml
-for (var i in navigator.languages) if (supportedLanguages.indexOf(navigator.languages[i]) &gt; -1) {
-    location.replace(navigator.languages[i] + "/"); break;
-}
-&lt;/script&gt;</code></pre>
-<h3 id="document-metadata">Document metadata</h3>
-<pre><code class="language-yaml">noIndex: false              # if true, the document will be excluded from search index
-
-description: A page.        # description as shown in search, also used for metaDescription if not explicitly set
-metaDescription: A page.    # description as used for the &lt;meta name="description"&gt; content
-
-pageLanguage: en            # language of the page
-
-prev: /page-before.md       # previous page if pagination is used
-prevTitle: The Page Before  # title of previous page (default would be "page-before" here)
-
-next: /test/example.md      # next page if pagination is used
-nextTitle: An example page  # title of next page (default would be "example" here)</code></pre>
+<h1 id="brandons-notes">Brandon's Notes</h1>
+<h2 id="hello">Hello!</h2>
+<p>This part of my site is mostly for my own personal use and may contain incorrect information. If you see something that looks wrong feel free to email me @ kupczyk.brandon@gmail.com. Much love.</p>
 <!-- CONTENT END -->
                 <nav class="pagination">
                     <div></div>
-                    <div><a href="http://kupczyk.me/notes/example.html">Couscous Tutorial</a> »</div>
+                    <div><a href="http://kupczyk.me/notes/couscous.html">Couscous usage Tutorial</a> »</div>
                 </nav>
             </article>
             <aside class="sidebar">
                 <hr>
-                <h2>About mintlook</h2>
+                <h2>Brandon&#039;s Notes</h2>
                 <h3>Links</h3>
-                <div class="bulletlink"><a href="/example.html">Example</a></div>
-                <div class="bulletlink"><a href="http://kupczyk.me/notes/">Mintlook and Couscous</a></div>
+                <div class="bulletlink"><a href="http://kupczyk.me/noteshttps://github.com/bkupz/">github</a></div>
                 <hr>
-                <p>Follow us on <a href="http://kupczyk.me">Main Site</a>, <a href="http://instagram.com">Instagram</
+                <p>Links: <a href="http://kupczyk.me">Main Site</a>, <a href="https://www.instagram.com/bkupz/">Instagram</a></p>
 
             </aside>
             <footer>
                 <hr>
 
 <!-- FOOTER BEGIN -->
-<p>Hello <strong>World</strong></
+<p>Brandon Kupczyk - 2018 -</p>
 
 <!-- FOOTER END -->
 
